System.out and System.err are now tenant-aware. Tenant permisisons added to tenant init method.